--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   --font-main: #141e46;
   --font-main-second: #1c2a60;
   --font-second: #c70039;
+  --font-second-second: #920029;
   --font-third: #ff6969;
   --font-shades: #fff5e0;
 }
@@ -34,7 +35,7 @@ nav > p {
 }
 
 main {
-  width: 50%;
+  width: 40%;
   margin: 0 auto;
 }
 
@@ -70,6 +71,7 @@ main > .book-input > .book-input-details > #button {
   color: var(--bg-main);
   font-family: "Poppins", sans-serif;
   font-weight: 600;
+  border: none;
 }
 
 main > .book-input > .book-input-details > #button:hover {
@@ -90,7 +92,13 @@ main > .book-list > h2 {
   margin-top: 0;
 }
 
-main > .book-list > #library > .book-container {
+main > .book-list > #library > .library-card {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+main > .book-list > #library > .library-card {
   margin-top: 16px;
   background-color: var(--bg-third);
   padding: 12px 16px;
@@ -98,10 +106,35 @@ main > .book-list > #library > .book-container {
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
-main > .book-list > #library > .book-container > h3 {
+main > .book-list > #library > .library-card > .book-container > h3 {
   margin: 0 0 8px 0;
 }
 
-main > .book-list > #library > .book-container > p {
+main > .book-list > #library > .library-card > .book-container > p {
   margin: 0;
+}
+
+main
+  > .book-list
+  > #library
+  > .library-card
+  > .button-container
+  > .delete-button {
+  background-color: var(--font-second);
+  border-radius: 6px;
+  padding: 6px 14px;
+  color: var(--bg-main);
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  border: none;
+}
+
+main
+  > .book-list
+  > #library
+  > .library-card
+  > .button-container
+  > .delete-button:hover {
+  cursor: pointer;
+  background-color: var(--font-second-second);
 }
